update name
